--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="images/CSS - My Site Images/cloud.png" alt="cloud">
+        <img class="top-cloud" src="Images/cloud.png" alt="cloud">
         <h1>Happy Kramer</h1>
         <h2>San Francisco Native</h2>
         <h2>Saint Cecilia's Flower Lady</h2>
