--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="Images/cloud.png" alt="cloud">
+        <img class="top-cloud" src="images/cloud.png" alt="cloud">
         <h1>Happy Kramer</h1>
         <h2>San Francisco Native</h2>
         <h2>Saint Cecilia's Flower Lady</h2>
-        <img class="cloud2" src="images/CSS - My Site Images/cloud.png" alt="cloud">
+        <img class="cloud2" src="images/cloud.png" alt="cloud">
         <img class= "circular" src="https://thumbs.dreamstime.com/b/golden-gate-bridge-flat-color-icon-sights-san-francisco-united-states-illustration-web-page-mobile-app-banner-social-media-144298546.jpg" alt="mountain">
     </div>
     <!-- <div class="middle-container"> -->
