--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- <div class="skills">
           <h2></h2> -->
     <div class="skill-row">
-            <img class="family-img" src="images/family.jpg" alt="family">
+            <img class="family-img" src="images/family.JPG" alt="family">
             <h3>My Family</h3>
             <h4>The Haskells: Will, Kevin, Grace, Karin, Gavin; Colin Kramer; Chrissy and Kevin Kramer; Brien Kramer, Kayley, Brendan, Sarah, Sean, Happy</h4>
     </div>
