--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <!-- <div class="middle-container"> -->
     <div class="profile">
-          <img class="main-img" src="images/hap.jpg" alt="happy-kramer">
+          <img class="main-img" src="images/hap.JPG" alt="happy-kramer">
           <p class="hello-text">Hello, I'm Happy!</p>
           <p class="hello-text">Welcome to my page. May God bless you!</p>
     </div>
